fixed whitespace on homepage

--- a/client/src/components/homePage/mainPage/style.css
+++ b/client/src/components/homePage/mainPage/style.css
@@ -1,5 +1,5 @@
 .homePageWrapper {
-    height: 95%;
+    height: 100%;
     width: 100%;
     background-image: url("./assets/embossed-diamond.png");
 }
