--- a/client/src/pages/checkout/style.css
+++ b/client/src/pages/checkout/style.css
@@ -1,11 +1,11 @@
 .appWrapper {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     overflow: auto;
 }
 
 .coWrapperPage {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     overflow: auto;
 }
